--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  Steve Ellcey  <sje@cup.hp.com>
+
+	* config/ia64/hpux.h (TARGET_DEFAULT): Include TARGET_ILP32.
+
 2002-09-26  Igor Shevlyakov <igor@microunity.com>
 
 	* combine.c (simplify_set): Don't call to force_to_mode if size
