--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-26  Steve Ellcey  <sje@cup.hp.com>
 
+	* config/ia64/hpux.h (ASM_OUTPUT_EXTERNAL_LIBCALL): New
+
+2002-09-26  Steve Ellcey  <sje@cup.hp.com>
+
 	* config/ia64/hpux.h (TARGET_DEFAULT): Include TARGET_ILP32.
 
 2002-09-26  Igor Shevlyakov <igor@microunity.com>
