--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-24  Eric Christopher  <echristo@redhat.com>
+
+        * except.c (expand_builtin_extract_return_address): Handle case
+	where Pmode != ptr_mode.
+
 2002-09-26  Steve Ellcey  <sje@cup.hp.com>
 
 	* config/ia64/hpux.h (ASM_OUTPUT_EXTERNAL_LIBCALL): New
@@ -17,7 +22,7 @@
 
 2002-09-26  Ulrich Weigand  <uweigand@de.ibm.com>
 
-	* expr.c (expand_expr) [MINUS_EXPR]: Convert A - const to 
+	* expr.c (expand_expr) [MINUS_EXPR]: Convert A - const to
 	A + (-const) on RTX level, even for unsigned types.
 
 2002-09-26  Ulrich Weigand  <uweigand@de.ibm.com>
