--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2002-09-26  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* c-common.h: Follow spelling conventions.
+	* cpplex.c: Likewise.
+	* cpplib.h: Likewise.
+	* gthr-dce.h: Likewise.
+	* gthr-posix.h: Likewise.
+	* optabs.c: Likewise.
+	* output.h: Likewise.
+	* profile.c: Likewise.
+	* protoize.c: Likewise.
+	* ra-rewrite.c: Likewise.
+	* real.c: Likewise.
+	* recog.c: Likewise.
+	* reg-stack.c: Likewise.
+	* regclass.c: Likewise.
+	* regmove.c: Likewise.
+	* reload.c: Likewise.
+	* reload.h: Likewise.
+	* reload1.c: Likewise.
+	* reorg.c: Likewise.
+	* resource.c: Likewise.
+	* rtl.h: Likewise.
+	* rtlanal.c: Likewise.
+
 2002-09-26  Steve Ellcey  <sje@cup.hp.com>
 
 	* config/ia64/ia64.c (ia64_expand_load_address): Ensure correct mode
