* gcc.c-torture/execute/loop-15.c: New.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57557 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.c-torture/execute/loop-15.c: New.
+
 2002-09-26  Janis Johnson  <janis187@us.ibm.com>
 
 	* README.QMTEST: Fix typo.
