--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-26  Richard Henderson  <rth@redhat.com>
+
+	* emit-rtl.c (active_insn_p): Consider a clobber of the
+	function return value to be active even after reload.
+
 2002-09-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* doloop.c (doloop_modify_runtime <biv skips initial incr>): Adjust
