--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 2002-09-26  Richard Henderson  <rth@redhat.com>
 
+	PR opt/7520
 	* emit-rtl.c (active_insn_p): Consider a clobber of the
 	function return value to be active even after reload.
 
