--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-26  Chris Lattner  <sabre@nondot.org>
+
+	* ssa.c (rename_insn_1): Handle RENAME_NO_RTX correctly when
+	handling undefined values.
+
 2002-09-26  Richard Henderson  <rth@redhat.com>
 
 	PR opt/7520
