--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  Richard Henderson  <rth@redhat.com>
+
+	* emit-rtl.c (const_double_htab_eq): Remove unused variable.
+
 2002-09-26  Chris Lattner  <sabre@nondot.org>
 
 	* ssa.c (rename_insn_1): Handle RENAME_NO_RTX correctly when
