--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-09-26  Richard Henderson  <rth@redhat.com>
 
+	PR c/7160
+	* sched-deps.c (sched_analyze_insn): Make clobber insns depend
+	on call insns.
+
+2002-09-26  Richard Henderson  <rth@redhat.com>
+
 	* emit-rtl.c (const_double_htab_eq): Remove unused variable.
 
 2002-09-26  Chris Lattner  <sabre@nondot.org>
