--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-26  Richard Henderson  <rth@redhat.com>
+
+	PR c/7160
+	* sched-deps.c (sched_analyze_insn): Make clobber insns depend
+	on call insns.
+
 2002-09-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* doloop.c (doloop_modify_runtime <biv skips initial incr>): Adjust
