--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2002-09-26  David Edelsohn  <edelsohn@gnu.org>
+
+	* dbxout.c (FORCE_TEXT): Switch to current_function_decl, not
+	text_section.
+	* xcoffout.h (DBX_STATIC_BLOCK_START): Remove explicit change to 
+	text section.
+	* config/rs6000/rs6000.c (rs6000_override_options): Allow
+	function-sections and data-sections functionality on AIX.
+
+2002-09-26  David Edelsohn  <edelsohn@gnu.org>
+	    Dale Johannesen  <dalej@apple.com>
+
+	* config/rs6000/rs6000.c (rs6000_emit_move): Insert zero-extend
+	in RTL for sub-word loads from memory.
+
 2002-09-26  Richard Henderson  <rth@redhat.com>
 
 	PR c/7160
