2002-09-26  David S. Miller  <davem@redhat.com>
	PR optimization/7335
	* calls.c (emit_library_call_value_1): Passing args by reference
	converts a CONST function into a PURE one.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57576 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-26  David S. Miller  <davem@redhat.com>
+
+	PR optimization/7335
+	* calls.c (emit_library_call_value_1): Passing args by reference
+	converts a CONST function into a PURE one.
+
 2002-09-26  David Edelsohn  <edelsohn@gnu.org>
 
 	* dbxout.c (FORCE_TEXT): Switch to current_function_decl, not
