2002-09-26  David S. Miller  <davem@redhat.com>
	* gcc.c-torture/compile/trunctfdf.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  David S. Miller  <davem@redhat.com>
+
+	* gcc.c-torture/compile/trunctfdf.c: New.
+
 2002-09-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* lib/target-supports.exp (check_weak_available): Handle solaris2.
