--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
-2002-09-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+2002-09-26  David S. Miller  <davem@redhat.com>
 
+	* gcc.c-torture/compile/trunctfdf.c: New.
+
+2002-09-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 	* lib/target-supports.exp (check_weak_available): Handle solaris2.
 
 2002-09-27  Alan Modra  <amodra@bigpond.net.au>
