* config/h8300/h8300.c (compute_saved_regs): Use a macro 	instead of a hard register number. 	(get_shift_alg): Use an enumerated type instead of numbers. 	(h8300_shift_needs_scratch_p): Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57586 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-27  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.c (compute_saved_regs): Use a macro
+	instead of a hard register number.
+	(get_shift_alg): Use an enumerated type instead of numbers.
+	(h8300_shift_needs_scratch_p): Likewise.
+
 2002-09-26  David S. Miller  <davem@redhat.com>
 
 	PR optimization/7335
