--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -13822,9 +13822,13 @@
 	      (clobber (reg:CC 17))])]
   ""
 {
-  if (!flag_pic)
-    abort ();
-  operands[2] = pic_offset_table_rtx;
+  if (flag_pic)
+    operands[2] = pic_offset_table_rtx;
+  else
+    {
+      operands[2] = gen_reg_rtx (Pmode);
+      emit_insn (gen_set_got (operands[2]));
+    }
   operands[3] = ix86_tls_get_addr ();
 })
 
@@ -13864,8 +13868,13 @@
 	      (clobber (reg:CC 17))])]
   ""
 {
-  if (!flag_pic)
-    abort ();
+  if (flag_pic)
+    operands[2] = pic_offset_table_rtx;
+  else
+    {
+      operands[2] = gen_reg_rtx (Pmode);
+      emit_insn (gen_set_got (operands[2]));
+    }
   operands[1] = pic_offset_table_rtx;
   operands[2] = ix86_tls_get_addr ();
 })
