2002-09-26  Andrew Haley  <aph@redhat.com>
	* expr.c (build_java_array_length_access): Check for null pointer.
	* expr.c (expand_java_arrayload): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57591 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-26  Andrew Haley  <aph@redhat.com>
+
+	* expr.c (build_java_array_length_access): Check for null pointer.
+	* expr.c (expand_java_arrayload): Likewise.
+
 2002-09-21  Richard Henderson  <rth@redhat.com>
 
 	* jcf-parse.c (get_constant): Decode from IEEE no matter 
