re PR rtl-optimization/7520 (internal compiler error in verify_local_live_at_start)
        PR optimization/7520
        * cfganal.c (flow_active_insn_p): New.
        (forwarder_block_p): Use it.

From-SVN: r57593

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-09-27  Richard Henderson  <rth@redhat.com>
 
+	PR optimization/7520
+	* cfganal.c (flow_active_insn_p): New.
+	(forwarder_block_p): Use it.
+
+2002-09-27  Richard Henderson  <rth@redhat.com>
+
 	* emit-rtl.c (active_insn_p): Revert last change.
 
 2002-09-27  Jakub Jelinek  <jakub@redhat.com>
