re PR preprocessor/8055 (PATCH: cpp0 dies with SIG11 when building FreeBSD kernel)
2002-09-27  Alexander N. Kabaev <ak03@gte.com>

	PR preprocessor/8055
	* cppmacro.c (stringify_arg): Do not overflow the buffer
	with the terminating NUL when the argument to be stringified
	has no tokens.
	* gcc.dg/cpp/20020927-1.c: New.

From-SVN: r57601

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,8 +1,13 @@
+2002-09-27  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/cpp/20020927-1.c: New.
+
 2002-09-26  David S. Miller  <davem@redhat.com>
 
 	* gcc.c-torture/compile/trunctfdf.c: New.
 
 2002-09-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
 	* lib/target-supports.exp (check_weak_available): Handle solaris2.
 
 2002-09-27  Alan Modra  <amodra@bigpond.net.au>
@@ -37,7 +42,7 @@
 
 	* testsuite/g++.dg/abi/bitfield5.C: New test.
 	* testsuite/g++.dg/abi/vbase10.C: Likewise.
-	
+
 2002-08-15  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/_Pragma3.c, gcc.dg/cpp/vararg3.c, gcc.dg/cpp/vararg4.c:
@@ -92,7 +97,7 @@
 
 	PR c++/7224
 	* g++.dg/overload/error1.C: New test.
-	
+
 2002-07-03  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/6706
@@ -602,8 +607,8 @@
 
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
-        * gcc.c-torture/execute/20020307-2.c (main): Pass a variable sized
-        structure.
+	* gcc.c-torture/execute/20020307-2.c (main): Pass a variable sized
+	structure.
 
 2002-03-26  David Billinghurst  <David.Billinghurst@riotinto.com>
 
@@ -853,7 +858,7 @@ Sat Mar  9 07:30:53 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-02-21  Aldy Hernandez  <aldyh@redhat.com>
 
-        * gcc.dg/attr-alwaysinline.c: New.
+	* gcc.dg/attr-alwaysinline.c: New.
 
 2002-02-21  Jakub Jelinek  <jakub@redhat.com>
 
@@ -930,7 +935,7 @@ Sat Mar  9 07:30:53 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-02-13  Stan Shebs  <shebs@apple.com>
 
-        * gcc.dg/altivec-3.c: New.
+	* gcc.dg/altivec-3.c: New.
 
 2002-02-12  Jakub Jelinek  <jakub@redhat.com>
 
@@ -1036,13 +1041,13 @@ Sat Mar  9 07:30:53 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 2002-02-06  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* g++.dg/ext/align1.C: Do not use an explicit alignment value
-        as certain file formats cannot support particularly large
-        alignments.
+	as certain file formats cannot support particularly large
+	alignments.
 
 	* g++.dg/warn/weak1.C: Expect a warning from COFF toolchains,
 	and do not expect to be able to link the executable.
 
-        * g++.old-deja/g++.ext/attrib5.C: Expect the compilation to
+	* g++.old-deja/g++.ext/attrib5.C: Expect the compilation to
 	fail because the COFF format does not support the weak attribute.
 
 2002-02-05  David Billinghurst <David.Billinghurst@riotinto.com>
@@ -1051,8 +1056,8 @@ Sat Mar  9 07:30:53 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
 
-        * gcc.dg/altivec-4.c: AltiVec builtin predicates changed format.
-        Fix testcase accordingly.
+	* gcc.dg/altivec-4.c: AltiVec builtin predicates changed format.
+	Fix testcase accordingly.
 
 2002-02-04  Richard Henderson  <rth@redhat.com>
 
