--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-27  Alexander N. Kabaev <ak03@gte.com>
+
+	PR preprocessor/8055
+	* cppmacro.c (stringify_arg): Do not overflow the buffer
+	with the terminating NUL when the argument to be stringified
+	has no tokens.
+
 2002-09-26  David S. Miller  <davem@redhat.com>
 
 	PR optimization/7335
@@ -60,7 +67,7 @@
 
 2002-09-16  Jeff Law <law@redhat.com>
 
-        * libgcc2.c: Do not include machmode.h.
+	* libgcc2.c: Do not include machmode.h.
 
 2002-09-16  Jason Merrill  <jason@redhat.com>
 	    Danny Smith  <dannysmith@users.sourceforge.net>
@@ -256,7 +263,7 @@
 2002-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* doc/invoke.texi: Document -Wabi.
-	
+
 2002-08-23  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_select_section): Treat
@@ -272,7 +279,7 @@
 	* explow.c (expr_size): Call it.
 	(int_expr_size): New fn.
 	* expr.h: Declare it.
-	* expr.c (expand_expr) [CONSTRUCTOR]: Use it to calculate how 
+	* expr.c (expand_expr) [CONSTRUCTOR]: Use it to calculate how
 	much to store.
 
 2002-08-23  Alan Modra  <amodra@bigpond.net.au>
