* ChangeLog.4: Fix typos. 	* ChangeLog.6: Likewise. 	* FSFChangeLog.10: Likewise. 	* genattrtab.c: Fix comment typos. 	* haifa-sched.c: Likewise. 	* real.c: Likewise. 	* tree.h: Likewise. 	* config/arm/arm.c: Likewise. 	* config/arm/crti.asm: Likewise. 	* config/arm/crtn.asm: Likewise. 	* config/frv/frv.c: Likewise. 	* config/frv/frv.md: Likewise. 	* config/h8300/h8300.md: Likewise. 	* config/i386/rtemself.h: Likewise. 	* config/ia64/unwind-ia64.c: Likewise. 	* config/ip2k/ip2k.h: Likewise. 	* config/m88k/m88k.c: Likewise. 	* config/m88k/m88k.md: Likewise. 	* config/mips/sr71k.md: Likewise. 	* config/mmix/mmix.c: Likewise. 	* config/rs6000/rs6000.c: Likewise. 	* config/sh/sh.md: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57614 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -11108,7 +11108,7 @@ Sun 20-Aug-2000 09:25:45 BST  Neil Booth  <NeilB@earthling.net>
 	instructions in it before checking for indirect jumps.
 
 	* ifcvt.c (find_if_block): Do not consider a THEN block that ends
-	in a indirect jump as a potential for conditional execution.
+	in an indirect jump as a potential for conditional execution.
 
 	* d30v.h (d30v_init_expanders): Don't declare here.
 	* d30v-protos.h (d30v_init_expanders): Declare here with a valid
