--- a/gcc/ChangeLog.6
+++ b/gcc/ChangeLog.6
@@ -12374,7 +12374,7 @@ Thu Aug 30 10:21:43 2001  J"orn Rennecke <amylaar@redhat.com>
 	(INIT_SECTION_ASM_OP): Define.
 	(FINI_SECTION_ASM_OP): Define.
 	(SUBTARGET_EXTRA_SECTIONS): Remove trailing comma.
-	(RDATA_SECTION_FUNCITON): Provide prototype.
+	(RDATA_SECTION_FUNCTION): Provide prototype.
 
 2001-08-29  Geoffrey Keating  <geoffk@redhat.com>
 
