--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2002-09-28  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* ChangeLog.4: Fix typos.
+	* ChangeLog.6: Likewise.
+	* FSFChangeLog.10: Likewise.
+	* genattrtab.c: Fix comment typos.
+	* haifa-sched.c: Likewise.
+	* real.c: Likewise.
+	* tree.h: Likewise.
+	* config/arm/arm.c: Likewise.
+	* config/arm/crti.asm: Likewise.
+	* config/arm/crtn.asm: Likewise.
+	* config/frv/frv.c: Likewise.
+	* config/frv/frv.md: Likewise.
+	* config/h8300/h8300.md: Likewise.
+	* config/i386/rtemself.h: Likewise.
+	* config/ia64/unwind-ia64.c: Likewise.
+	* config/ip2k/ip2k.h: Likewise.
+	* config/m88k/m88k.c: Likewise.
+	* config/m88k/m88k.md: Likewise.
+	* config/mips/sr71k.md: Likewise.
+	* config/mmix/mmix.c: Likewise.
+	* config/rs6000/rs6000.c: Likewise.
+	* config/sh/sh.md: Likewise.
+
 2002-09-26  Theodore A. Roth  <troth@verinet.com>
 
         * config/avr/avr.c: Eliminate use of _PC_ in pc relative insns.
