--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-28  Paolo Carlini  <pcarlini@unitus.it>
+
+	* include/bits/locale_facets.tcc (num_put::_M_widen_int):
+	Deal correctly with grouped, showbased (oct or hex) zero.
+	* testsuite/22_locale/num_put_members_char.cc: Add test05.
+	* testsuite/22_locale/num_put_members_wchar_t.cc: Ditto.
+
 2002-09-25  Phil Edwards  <pme@gcc.gnu.org>
 
 	Bulk documentation merge (copy) from trunk.
