--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-28  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/20020720-1.x: No longer skip test on
+	powerpc and MMIX targets.
+
 2002-09-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/cpp/20020927-1.c: New.
