--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-29  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* cp-tree.h: Fix comment typos.
+	* decl.c: Likewise.
+	* pt.c: Likewise.
+
 2002-09-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp/class.c (contains_empty_class_p): New method.
