* src/arm/sysv.S: Fix typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57627 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-29  Richard Earnshaw  <rearnsha@arm.com>
+
+	* src/arm/sysv.S: Fix typo.
+
 2002-09-28  Richard Earnshaw  <rearnsha@arm.com>
 
 	* src/arm/sysv.S: If we don't have machine/asm.h and the pre-processor
