--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* expmed.c (extract_bit_field): Fix bit-field extraction from SUBREGs.
+
 2002-09-29  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* builtins.def: Fix comment formatting.
