--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* darwin-protos.h (darwin_asm_output_dwarf_delta): Prototype.
+
+	* ia64.c (ia64_hpux_asm_file_end): Const-ify.
+
 2002-09-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* expmed.c (extract_bit_field): Fix bit-field extraction from SUBREGs.
