* real.h (ibm_extended_format): Declare.         * real.c (encode_ibm_extended, decode_ibm_extended): New         functions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-29  David Edelsohn  <edelsohn@gnu.org>
+
+	* real.h (ibm_extended_format): Declare.
+	* real.c (encode_ibm_extended, decode_ibm_extended): New
+	functions.
+
 2002-09-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* darwin-protos.h (darwin_asm_output_dwarf_delta): Prototype.
