--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-29  Richard Henderson  <rth@redhat.com>
+
+	* combine.c (force_to_mode): Handle FLOAT_MODE destinations
+	for CONST_INT.
+
 2002-09-29  David Edelsohn  <edelsohn@gnu.org>
 
 	* real.h (ibm_extended_format): Declare.
