--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-29  Anthony Green  <green@redhat.com>
+
+	* libjava.lang/TestProxy.java: New file.
+	* libjava.lang/TestProxy.out: Ditto.
+
+2002-09-29  Anthony Green  <green@redhat.com>
+
+	* libjava.lang/utf8concat.java: New file.
+	* libjava.lang/utf8concat.out: Ditto.
+
 2002-08-26  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.compile/narrow_case.java: New file.
