--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-29  Richard Henderson  <rth@redhat.com>
 
+	* real.c (real_from_string): Apply sign last.  Tidy exponent handling.
+
+2002-09-29  Richard Henderson  <rth@redhat.com>
+
 	* combine.c (force_to_mode): Handle FLOAT_MODE destinations
 	for CONST_INT.
 
