--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-30  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* configure.in (s390*-*-linux*): Enable libgcj.
+
 2002-09-29  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure: Revert accidentally applied changes.
