--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/abi/empty7.C: New test.
+	* g++.dg/init/pm2.C: Likewise.
+	
 2002-09-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/rtti/crash1.C: New test.
